tests/fixtures/invalid/void_pointer_local_declaration.c
int main(void) {
    void *slot;
    return 0;
}
